Add Cicerone and implement single-activity mode

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,7 @@ dependencies {
     kapt "com.github.moxy-community:moxy-compiler:2.1.2"
     implementation "com.github.moxy-community:moxy-ktx:2.1.2"
     implementation "com.github.moxy-community:moxy-androidx:2.1.2"
+
+    //Cicerone
+    implementation 'ru.terrakok.cicerone:cicerone:5.1.1'
 }
