--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,8 @@ dependencies {
 
     //Cicerone
     implementation 'ru.terrakok.cicerone:cicerone:5.1.1'
+
+    //RxJava
+    implementation 'io.reactivex.rxjava3:rxjava:3.0.6'
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
 }
