--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,4 +79,6 @@ dependencies {
     //Room
     implementation 'androidx.room:room-runtime:2.2.5'
     kapt 'androidx.room:room-compiler:2.2.5'
+    implementation 'androidx.room:room-ktx:2.2.5'
+
 }
