--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,4 +81,8 @@ dependencies {
     kapt 'androidx.room:room-compiler:2.2.5'
     implementation 'androidx.room:room-ktx:2.2.5'
 
+    //Dagger
+    implementation 'com.google.dagger:dagger:2.29.1'
+    kapt 'com.google.dagger:dagger-compiler:2.29.1'
+
 }
